[project]
name = "yt-api-wrapper"
version = "0.1.0"
description = "A robust YouTube web scraper/wrapper for fetching video metadata and search results without the official API."
authors = [
    { name="isa-programmer", email="isaprogrammer@proton.me" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
